--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,16 +2,16 @@
 
     <style name="AppTheme" parent="Theme.MaterialComponents.NoActionBar">
         <!-- Original AppCompat attributes. -->
-        <item name="colorPrimary">@color/md_blue_900</item>
-        <item name="colorSecondary">@color/md_blue_500</item>
-        <item name="android:colorBackground">@color/md_blue_700</item>
+        <item name="colorPrimary">#A1230D</item>
+        <item name="colorSecondary">#EF3B3B</item>
+        <item name="android:colorBackground">#F84545</item>
         <item name="colorError">@color/errorColor</item>
 
         <!-- New MaterialComponents attributes. -->
         <item name="colorPrimaryVariant">@android:color/white</item>
-        <item name="colorSecondaryVariant">@color/md_blue_400</item>
+        <item name="colorSecondaryVariant">#861111</item>
         <!--> toolbar color -->
-        <item name="colorSurface">@color/md_blue_900</item>
+        <item name="colorSurface">#A10D0D</item>
         <item name="colorOnPrimary">@color/md_blue_50</item>
         <item name="colorOnSecondary">@color/md_blue_50</item>
         <item name="colorOnBackground">@color/md_blue_50</item>
